--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "passwordGenerator",
-  "displayName": "passwordGenerator"
+  "name": "Password Generator",
+  "displayName": "Password Generator"
 }
