--- a/ios/PasswordGenerator.xcodeproj/xcshareddata/xcschemes/PasswordGenerator.xcscheme
+++ b/ios/PasswordGenerator.xcodeproj/xcshareddata/xcschemes/PasswordGenerator.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "passwordGenerator.app"
-               BlueprintName = "passwordGenerator"
-               ReferencedContainer = "container:passwordGenerator.xcodeproj">
+               BuildableName = "PasswordGenerator.app"
+               BlueprintName = "PasswordGenerator"
+               ReferencedContainer = "container:PasswordGenerator.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "passwordGeneratorTests.xctest"
-               BlueprintName = "passwordGeneratorTests"
-               ReferencedContainer = "container:passwordGenerator.xcodeproj">
+               BuildableName = "PasswordGeneratorTests.xctest"
+               BlueprintName = "PasswordGeneratorTests"
+               ReferencedContainer = "container:PasswordGenerator.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "passwordGenerator.app"
-            BlueprintName = "passwordGenerator"
-            ReferencedContainer = "container:passwordGenerator.xcodeproj">
+            BuildableName = "PasswordGenerator.app"
+            BlueprintName = "PasswordGenerator"
+            ReferencedContainer = "container:PasswordGenerator.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "passwordGenerator.app"
-            BlueprintName = "passwordGenerator"
-            ReferencedContainer = "container:passwordGenerator.xcodeproj">
+            BuildableName = "PasswordGenerator.app"
+            BlueprintName = "PasswordGenerator"
+            ReferencedContainer = "container:PasswordGenerator.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
