--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "passwordgenerator",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
@@ -17,6 +17,7 @@
     "formik": "^2.4.6",
     "react": "19.1.0",
     "react-native": "0.80.2",
+    "react-native-bootsplash": "^6.3.10",
     "react-native-bouncy-checkbox": "^4.1.2",
     "react-native-device-info": "^14.0.4",
     "yup": "^1.7.0"
